# dioxus-starter

./: Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json  tailwind.config.js
public/: output.css
src/: main.rs
src/components/: logo.rs  side_bar.rs
src/routes/: root.rs  signin_page.rs
src/ui/: avatar.rs  button.rs  form.rs  form_field.rs
