[package]
name = "dioxus-starter"
version = "0.1.0"
authors = ["Fredrick Kamau <freddie9572@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.216", features = ["derive"] }
wasm-bindgen = "0.2.99"

dioxus = { version = "^0.6.1", features = ["fullstack", "router"] }

# Debug
dioxus-logger = "^0.6.1"

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
